# VRCTranslate

./: .gitignore  OCR模型升级方案.md  README.md  THIRD_PARTY_NOTICES.md  UI与OCR悬浮交互重构方案.md  VRCTranslate.spec  pyproject.toml  requirements.txt  使用说明.md  多语言全链路质量与性能测试报告.md  多语言翻译质量测试报告.md  多语言质量提升实施方案.md
benchmarks/: __init__.py  benchmark_config.py  common.py  generate_report.py  prepare_assets.py  run_asr_benchmark.py  run_asr_robustness_benchmark.py  run_domain_invariant_benchmark.py  run_end_to_end_benchmark.py  run_ocr_benchmark.py  run_ocr_stress_benchmark.py  run_python.ps1  run_translation_benchmark.py
benchmarks/results/: asr_cases.csv  asr_robustness_cases.csv  asr_robustness_summary.json  asr_summary.json  benchmark_metadata.json  domain_invariant_cases.csv  domain_invariant_summary.json  end_to_end_asr_cases.csv  end_to_end_ocr_cases.csv  end_to_end_summary.json  ocr_cases.csv  ocr_stress_cases.csv  ocr_stress_summary.json  ocr_summary.json  selected_routes.json  translation_availability.json  translation_cases.csv  translation_resources.json  translation_summary.json
packaging/: README.md  portable-data-readme.txt
src/vrctranslate/: __init__.py  __main__.py  bootstrap.py
src/vrctranslate/application/: __init__.py  dto.py  language_capabilities.py  speech_profiles.py  translation_quality.py
src/vrctranslate/domain/: __init__.py  chatbox.py  errors.py  glossary.py  languages.py  ocr.py  speech.py  text_rules.py  translation.py  visual_translation.py
tests/architecture/: test_dependency_rules.py
tests/unit/: test_packaging_contract.py  test_version.py
(+264 files in other folders)
